# CMSC-471

./: CMakeLists.txt  canny.c
PycharmProjects/471_Proj/: baby_driver.py  eval_funcs.py
PycharmProjects/Chess_Proj/: baby_driver.py
